--- a/trunk/mts/src/main/conf/importsipp/Templates/scenario.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/scenario.xml
@@ -3,16 +3,15 @@
 <parameter name="[local_port]" operation="set" value="[localPort({integer})]"/>
 <parameter name="[remote_port]" operation="set" value="[remotePort({integer})]"/>
 <createListenpointSIP name="_listenpoint[local_port]" localHost="[local_ip]" localPort="[local_port]"/>
-<parameter name="[testcase:call_number]" operation="set" value="0" />
 <if> 
 <condition>
-	<test parameter="[testcase:call_number]" condition="list.exists"/>
+	<test parameter="[testcase:callNumber_{integer}]" condition="list.exists"/>
 </condition>
 <then>
-	<parameter name="[testcase:call_number]" operation="number.add" value="[testcase:call_number]" value2="1" />
+	<parameter name="[testcase:callNumber_{integer}]" operation="number.add" value="[testcase:callNumber_{integer}]" value2="1" />
 </then>
 <else>
-	<parameter name="[testcase:call_number]" operation="set" value="0"/>
+	<parameter name="[testcase:callNumber_{integer}]" operation="set" value="0"/>
 	
 	<parameter name="[testcase:{regex:\b(\w*?field\d)\]}_mts]" operation="file.readcsv" value="[_fileName]" value2="{regex:\bfield(\d)\]}"/>
 	<parameter name="[testcase:{regex:\b(\w*?field\d file=&quot;\w+\.\w+&quot;)}_mts]" operation="file.readcsv" value="{regex:file=\&quot;([^\&quot;]*)\&quot;}" value2="{regex:\bfield(.) file=}"/>
@@ -21,6 +20,7 @@
 	<parameter name="[testcase:{regex:(\b(\w*?field\d))\]}_size]" operation="list.size" value="[testcase:{regex:\b(\w*?field\d)\]}_mts]" />
 </else>
 </if>
+<parameter name="[testcase:call_number]" operation="set" value="[testcase:callNumber_0]"/>
 <parameter name="[timestamp]" operation="system.timestamp" />
 <parameter name="[call_id]" operation="number.random" value="10000000" />
 <parameter name="[cseq]" operation="set" value="1" />
