--- a/trunk/mts/src/main/conf/importsipp/Templates/testSuite.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/testSuite.xml
@@ -25,4 +25,6 @@
 <parameter name="[frequency]" operation="set" value="1" editable="true" />
 <parameter name="[instances]" operation="set" value="10" editable="true" />
 <parameter name="[endIteration]" operation="set" value="10" editable="true" />
+<parameter name="[cseq]" operation="set" value="1" editable="true"/>
+<parameter name="[recv_timeout]" operation="set" value="30" editable="true"/>
 </template>
