--- a/trunk/mts/src/main/conf/importsipp/Templates/testSuite.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/testSuite.xml
@@ -3,12 +3,12 @@
 <!-- Local parameters -->
 <parameter name="[local_ip]" operation="system.ipaddress"/>
 <parameter name="[local_ip]" operation="set" value="[local_ip(0)]" editable="true"/>
-<parameter name="[localPort]" operation="set" value="6060,7060,8060,9060,10060" />
+<parameter name="[localPort]" operation="set" value="6060,7060,8060,9060,10060" editable="true"/>
 <parameter name="[localPort]" operation="string.split" value="[localPort]" value2="," />
 <!-- Remote parameters -->
 <parameter name="[remote_ip]" operation="system.ipaddress"/>
 <parameter name="[remote_ip]" operation="set" value="[remote_ip(0)]"  editable="true"/>
-<parameter name="[remotePort]" operation="set" value="7060,8060,9060,10060,6060" />
+<parameter name="[remotePort]" operation="set" value="7060,8060,9060,10060,6060" editable="true"/>
 <parameter name="[remotePort]" operation="string.split" value="[remotePort]" value2="," />
 <!-- Media parameters -->
 <parameter name="[media_ip]" operation="system.ipaddress"/>
