--- a/trunk/mts/src/main/conf/importsipp/Templates/ereg.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/ereg.xml
@@ -7,6 +7,6 @@
 <parameter name="[search_in]" operation="setFromMessage" value="content" state="{xpath:.[@search_in = 'body']/@search_in}" />
 <parameter name="[{xpath:./@assign_to}]" operation="string.matches" value="[search_in]" value2="{xpath:./@regexp}" />
 <parameter name="[result]" operation="set" value="[{xpath:./@assign_to}]" />
-<test parameter="[result]" condition="boolean.equals" value="false" state="{xpath:.[@check_it = 'true']/@check_it}" />
+<test parameter="[result]" condition="boolean.equals" value="true" state="{xpath:.[@check_it = 'true']/@check_it}" />
 <test parameter="[result]" condition="boolean.equals" value="true" state="{xpath:.[@check_it_inverse = 'true']/@check_it_inverse}"/>
 </template>
